@@ -1,3 +1,8 @@
+2006-09-26  David Smith  <dsmith@redhat.com>
+
+	* transport.c: Changed 'stpd' references to 'staprun'.
+	* transport.txt: Ditto.
+
 2006-09-26  Martin Hunt  <hunt@redhat.com>
 
 	* transport.c (_stp_handle_start): Don't initialize timers here.
